--- a/module/Frontend/view/v1/frontend/search/index.phtml
+++ b/module/Frontend/view/v1/frontend/search/index.phtml
@@ -59,7 +59,7 @@
                                         <thead>
                                             <tr>
                                                 <th class="text-center">Tiêu đề</th>
-                                                <th class="text-center" width="80px" style="color: #69A467">Danh mục</th>
+                                                <th class="text-center hidden-xs" width="80px" style="color: #69A467">Danh mục</th>
                                                 <th class="text-center color-location hidden-xs" width="95px">Khu vực</th>
                                                 <th class="text-center color-properties hidden-xs" width="70px">Nhu cầu</th>
                                                 <th class="text-center color-view hidden-xs">Xem</th>
