--- a/module/Frontend/view/v1/layout/nav-ads-right.phtml
+++ b/module/Frontend/view/v1/layout/nav-ads-right.phtml
@@ -88,22 +88,9 @@
     <div class="side-widget">
         <h4 class="inner-heading">Tags</h4>
         <div class="tags">
-            <a href="#">Ads</a>
-            <a href="#">Design</a>
-            <a href="#">Classified</a>
-            <a href="#">PSD’s</a>
-            <a href="#">Advertisement</a>
-            <a href="#">Jobs</a>
-            <a href="#">Community</a>
-            <a href="#">Business</a>
-            <a href="#">Interior</a>
-            <a href="#">Condo</a>
-            <a href="#">Pet</a>
-            <a href="#">Shopping</a>
-            <a href="#">Clothing</a>
-            <a href="#">Vehicles</a>
-
-
+            <?php foreach (unserialize(KEY_TOP) as $arr_key):?>
+            <a href="<?php echo $this->serverUrl() . $this->Url('search',['tu-khoa'=>$arr_key['key_slug']]) ?>"><?php echo $arr_key['key_name'];?></a>
+            <?php endforeach;?>
         </div>
     </div><!--end tags widget-->
 </div>
