--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -81,17 +81,17 @@
 <?php endif; ?>
 
 <!--Category-->
-<div align="center">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Ads top -->
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-pub-4608570842050780"
-         data-ad-slot="6344671952"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-</div>
+<!--<div align="center">-->
+<!--    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+<!--    <!-- Ads top -->-->
+<!--    <ins class="adsbygoogle"-->
+<!--         style="display:inline-block;width:728px;height:90px"-->
+<!--         data-ad-client="ca-pub-4608570842050780"-->
+<!--         data-ad-slot="6344671952"></ins>-->
+<!--    <script>-->
+<!--        (adsbygoogle = window.adsbygoogle || []).push({});-->
+<!--    </script>-->
+<!--</div>-->
 <section id="categories">
     <div class="container">
         <div class="row">
@@ -143,7 +143,16 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="advertise">
-                    <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/ad_03.png" alt="ad"> </a>
+                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- Ads top -->
+                    <ins class="adsbygoogle"
+                         style="display:inline-block;width:728px;height:90px"
+                         data-ad-client="ca-pub-4608570842050780"
+                         data-ad-slot="6344671952"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+<!--                    <a href="#"><img src="--><?php //echo STATIC_URL; ?><!--/f/v1/images/images/ad_03.png" alt="ad"> </a>-->
                 </div>
             </div>
         </div>
