--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -199,17 +199,17 @@
                         <!--<input type="text" name="humantest">-->
                     </form>
                     <div class="row">
-                        <div class="col-md-2 col-xs-2 control-label">
+                        <div class="col-md-2 col-xs-5 control-label">
                             <img class="img-captcha form-control" src=""/>
                         </div>
-                        <div class="col-md-6 col-xs-6">
+                        <div class="col-md-6 col-xs-5">
                             <input name="captcha" type="text" class="form-control" placeholder="Nhập mã bên cạnh">
                             <span class="comment-error-captcha" style="color: red; display: none"></span>
                         </div>
                         <div class="col-md-2 col-xs-2">
                             <a class="btn refresh-captcha" data-toggle="tooltip" title="Lấy mã mới"><i class="fa fa-2x fa-refresh"></i></a>
                         </div>
-                        <div class="col-md-2 col-xs-2"><button class="btn btn-primary pull-right add-comment">Gửi phản hồi</button></div>
+                        <div class="col-md-2 col-xs-2 col-xs-offset-6"><button class="btn btn-primary pull-right add-comment">Gửi phản hồi</button></div>
                     </div>
                 </div>
                 <!--end form submission-->
