--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -83,7 +83,7 @@
 <!--Category-->
 <!--<div align="center">-->
 <!--    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
-<!--    <!-- Ads top -->-->
+<!--    <!-- Ads top -->
 <!--    <ins class="adsbygoogle"-->
 <!--         style="display:inline-block;width:728px;height:90px"-->
 <!--         data-ad-client="ca-pub-4608570842050780"-->
