--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -73,7 +73,8 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
                 js.src = "//connect.facebook.net/vi_VN/sdk.js";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
-        </script><!--
+        </script>
+        <!--
         <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>-->
     </head>
 
