--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -385,12 +385,18 @@ if (empty($this->arrContent['user_created'])):
                 </div>
                 <div class="modal-body">
                     <div class="border-detail form-control timeline-desk">
-                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p> 
-                        <p><b style="color: red">BQN SVIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">2 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>"> cho tin</p>
-                        <p><b style="color: red">BQN SVIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">3</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>"> cho tin</p>
-                        <p style="color: blue">Hoặc nhắn tin theo cú pháp : </p> 
-                        <p><b style="color: red">BQN VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> cho tin</p>
-                        <p><b style="color: red">BQN VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> cho tin</p>
+<!--                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p> -->
+<!--                        <p><b style="color: red">BQN SVIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7650</b> để mua <b style="color: red">2 </b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?><!--"> cho tin</p>-->
+<!--                        <p><b style="color: red">BQN SVIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7750</b> để mua <b style="color: red">3</b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?><!--"> cho tin</p>-->
+<!--                        <p style="color: blue">Hoặc nhắn tin theo cú pháp : </p> -->
+<!--                        <p><b style="color: red">BQN VIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/vip2.gif'; ?><!--"> cho tin</p>-->
+<!--                        <p><b style="color: red">BQN VIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/vip2.gif'; ?><!--"> cho tin</p>-->
+
+                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p>
+                        <p><b style="color: red">Hiện tại chức năng mua VIP bằng SMS tạm bảo trì</b></p>
+                        <p><b style="color: red">Nếu bạn có nhu cầu mua VIP hoặc ý kiến vui lòng liên hệ</b></p>
+                        <p><b style="color: red">SĐT : 097 353 1618 </b></p>
+                        <p><b style="color: red">Hoặc Email : ngocchien01@gmail.com </b></p>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -410,12 +416,17 @@ if (empty($this->arrContent['user_created'])):
                 <div class="modal-body">
                     <h5>BẰNG TIN NHẮN</h5>
                     <div class="row border-detail form-control timeline-desk">
-                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p> 
-                        <p><b style="color: red">BQN SVIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">2 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>"> cho tin</p>
-                        <p><b style="color: red">BQN SVIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">3</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>"> cho tin</p>
-                        <p style="color: blue">Hoặc nhắn tin theo cú pháp : </p> 
-                        <p><b style="color: red">BQN VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> cho tin</p>
-                        <p><b style="color: red">BQN VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> cho tin</p>
+                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p>
+                        <p><b style="color: red">Hiện tại chức năng mua VIP bằng SMS tạm bảo trì</b></p>
+                        <p><b style="color: red">Nếu bạn có nhu cầu mua VIP hoặc ý kiến vui lòng liên hệ</b></p>
+                        <p><b style="color: red">SĐT : 097 353 1618 </b></p>
+                        <p><b style="color: red">Hoặc Email : ngocchien01@gmail.com </b></p>
+<!--                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p> -->
+<!--                        <p><b style="color: red">BQN SVIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7650</b> để mua <b style="color: red">2 </b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?><!--"> cho tin</p>-->
+<!--                        <p><b style="color: red">BQN SVIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7750</b> để mua <b style="color: red">3</b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?><!--"> cho tin</p>-->
+<!--                        <p style="color: blue">Hoặc nhắn tin theo cú pháp : </p> -->
+<!--                        <p><b style="color: red">BQN VIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/vip2.gif'; ?><!--"> cho tin</p>-->
+<!--                        <p><b style="color: red">BQN VIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/vip2.gif'; ?><!--"> cho tin</p>-->
                     </div>
                     <h5>HOẶC BẰNG SỐ DƯ TÀI KHOẢN</h5>
                     <div class="row border-detail form-control timeline-desk">
