--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -392,7 +392,7 @@ if (empty($this->arrContent['user_created'])):
 <!--                        <p><b style="color: red">BQN VIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/vip2.gif'; ?><!--"> cho tin</p>-->
 <!--                        <p><b style="color: red">BQN VIP RV--><?php //echo sprintf("%04d", $this->arrContent['cont_id']); ?><!--</b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày <img src="--><?php //echo STATIC_URL . '/f/v1/images/vip2.gif'; ?><!--"> cho tin</p>-->
 
-                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p>
+<!--                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p>-->
                         <p><b style="color: red">Hiện tại chức năng mua VIP bằng SMS tạm bảo trì</b></p>
                         <p><b style="color: red">Nếu bạn có nhu cầu mua VIP hoặc ý kiến vui lòng liên hệ</b></p>
                         <p><b style="color: red">SĐT : 097 353 1618 </b></p>
@@ -416,7 +416,7 @@ if (empty($this->arrContent['user_created'])):
                 <div class="modal-body">
                     <h5>BẰNG TIN NHẮN</h5>
                     <div class="row border-detail form-control timeline-desk">
-                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p>
+<!--                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p>-->
                         <p><b style="color: red">Hiện tại chức năng mua VIP bằng SMS tạm bảo trì</b></p>
                         <p><b style="color: red">Nếu bạn có nhu cầu mua VIP hoặc ý kiến vui lòng liên hệ</b></p>
                         <p><b style="color: red">SĐT : 097 353 1618 </b></p>
