--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -48,10 +48,10 @@
             <div class="row">
                 <div class="col-md-12" style="color: #505050">
                     <div class="col-md-2 col-sm-6">
-                        <span>
-                            WEBSITE ĐANG TRONG THỜI GIAN THỬ NGHIỆM VÀ ĐANG CHỜ XIN GIẤY PHÉP KINH DOANH
+                        <span style="color: red">
+                            WEBSITE ĐANG TRONG THỜI GIAN THỬ NGHIỆM
                         </span>
-                        //<img src="<?php echo STATIC_URL . '/f/v1/images/img-dkct.png'; ?>">
+<!--                        <img src="--><?php //echo STATIC_URL . '/f/v1/images/img-dkct.png'; ?><!--">-->
                         <?php // echo Phalcon\Tag::image(array("frontend/images/img-dkct.png", "alt" => "")); ?>
                     </div>
                     <div class="col-md-7 col-sm-6">
