--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -47,9 +47,9 @@
 
             <div class="row">
                 <div class="col-md-12" style="color: #505050">
-                    <div class="col-md-2 col-sm-6">
+                    <div class="col-md-6 col-sm-6">
                         <span style="color: red">
-                            WEBSITE ĐANG TRONG THỜI GIAN THỬ NGHIỆM
+                            <b>WEBSITE ĐANG TRONG THỜI GIAN THỬ NGHIỆM</b>
                         </span>
 <!--                        <img src="--><?php //echo STATIC_URL . '/f/v1/images/img-dkct.png'; ?><!--">-->
                         <?php // echo Phalcon\Tag::image(array("frontend/images/img-dkct.png", "alt" => "")); ?>
